bael-6556 - complete